# osmptparser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: main.workflow
.github/workflows/: workflow.yml
src/: bin.rs  example.rs  lib.rs  main.rs  parser.rs
src/parser/: mod.rs  parse_status.rs  relation.rs
tests/: integration_test.rs  test.pbf
