[package]
name = "osmptparser"
description = "Openstreetmap Public Transport Parser"
version = "1.2.1"
authors = ["Julian Perelli <jperelli@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"
readme = "README.md"

[lib]
name = "osmptparser"
crate-type = ["rlib", "cdylib"]

[dependencies]
# osm_pbf_iter = { path = "../rust-osm-pbf-iter" }
# osm_pbf_iter = { git = "https://github.com/astro/rust-osm-pbf-iter", rev="a7849efd7ac33768f0e982879ca1c6acc3ff82a6" }
osm_pbf_iter = "0.2.0"
crossbeam = "0.7.3"

[dev-dependencies]
num_cpus = "1.10.1"

[[example]]
name = "main"
path = "src/example.rs"
